added some checkin tips and some last minute changes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</ol>
 				</div>
 				<a href="#christielodge" data-scroll><img src="img/christielodgeinside.jpg" class="venue"></a>
-				<p class="justify">If you plan to arrive on or before Thursday, we hope you'll join us for a casual and relaxing evening at the lodge. We are still working on the details, but we will definitely have catering from a local restaurant, board games, and of course, some libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives. This will likely start around 7:00pm (Mountain), please check back for more details.</p>
+				<p class="justify">If you plan to arrive on or before Thursday, we hope you'll join us for a casual and relaxing evening at The Christie Lodge. We will have catering from a local deli, local pizza, bakery items, board games, and of course, plenty of libations. We hope you will swing by, relax with us, and meet some of the other important people in our lives! The Welcome Evening will start around 7:00pm (Mountain) at The Christie Lodge in the Lynn Weas Room (near the front desk).</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 
@@ -146,7 +146,7 @@
 					</ol>
 				</div>
 				<a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx"><img src="img/skistayplay.jpg" class="venue"></a>
-				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2 hours away and could be a wonderful addition to your vacation!</p>
+				<p class="justify">We chose to have our wedding on a Friday so that our guests can plan to explore and enjoy all that the Vail Valley has to offer. On Saturday, Renee and Russell will be <a href="http://www.beavercreek.com/">skiing Beaver Creek</a> and will probably end the day ice-skating at the <a href="http://www.beavercreek.com/events-and-activities/ice-skating.aspx">Black Family Ice Skating Rink</a>. Between Avon, <a href="http://www.beavercreek.com/events-and-activities/events-and-activities-winter.aspx">Beaver Creek</a>, and Vail, there is something for everyone! Please check out our <a href="#activities" data-scroll>Area Activities</a> section for some ideas! Also, both Boulder and Denver are about 2.5 hours away (depending on weather and traffic) and could be a wonderful addition to your vacation!</p>
 				<p>Friendly Reminder:  The Christie Lodge, Allie's Cabin, and Beaver Creek Village are smoke free environments.</p>
 			</section>
 		</section>
@@ -177,23 +177,29 @@
 				<a href="http://www.christielodge.com/">www.christielodge.com</a>
 			</p>
 			
-			<p>Contact Nancy Decesare directly to book your reservation!</br>
+			<p>Contact Nancy DeCesare directly to book your reservation!</br>
 				<a href="tel:1-970-845-4546">phone: 1.970.845.4546</a></br>
 				<a href="mailto:ndecesare@christielodge.com">email: NDecesare@ChristieLodge.com</a></br>
 				Nancy's office hours are Monday-Friday, 9am to 5pm (Mountain) but can be reached by email anytime!</br>
 				Don't forget to mention our Promotional Code: FSWED
 			</p>
+
+			<dl class="option">
+				<dt id="checkin"><em>Check-in Tips for The Christie Lodge:</em></dt>
+				<dd>Most of the time, you will be able to have early check-in so if you arrive ahead of schedule, please just ask! In addition, feel free to request assistance with your luggage as you check-in; there are some stairs that you cannot avoid, and The Chrstie Lodge offers this wonderful service so take advantage of it! Free parking is offered at The Christie Lodge if you rent a car or decide to drive; just remember to register it with front desk. Lastly, don't forget to pick up your Welcome Bag filled with a bunch of goodies and helpful items at the front desk!</dd>
+			</dl>
+
 			<p class="justify"><em>Important note:</em> We highly recommend you book your room no later than <em>January 28, 2015</em> as the room block and discount expires. We strongly recommend arriving on or before Thursday and join us for the <a href="#welcomeevening" data-scroll>Welcome Evening</a>.</p>
 			<h6>The Christie Lodge has two options for our guests:</h6>
 			<dl class="option">
 				<dt><a href="http://www.christielodge.com/one-bedroom-suites/"><em>Option 1 - </em>One Bedroom Suites:</a>
-				<dt>
+				</dt>
 				<dd>The one bedroom suite offers a partial kitchen, wood burning fireplace, balcony, a queen sized bed in the bedroom, a queen sized sleeper sofa in the living room, and a child sized day bed. Max occupancy: 2 adults and 2 children under 12.</dd>
 				<dt><a href="http://www.christielodge.com/three-bedroom-suites/"><em>Option 2 - </em>Three Bedroom Suites:</a></dt>
 				<dd>The three bedroom suite offers a partial kitchen, wood burning fireplace, balcony, three queen sized beds in the bedrooms, three bathrooms, a queen sized sleeper sofa, and a child sized daybed. Max occupancy: 6 adults and 1 child under 12.</dd>
 			</dl>
-			<p>The Christie Lodge offers free parking if you rent a car or decide to drive; just remember to register it with front desk. Also, The Christie Lodge will place the charge for your room fourteen days before your arrival date.</p>
-			<p>If you have any issues making a reservation, please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a></p>
+			<p>If you have any issues making a reservation, please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a>! Also, The Christie Lodge will place the charge for your room fourteen days before your arrival date.</p>
+
 		</section>
 
 		<section id="transportation">
@@ -429,7 +435,7 @@
 		<p>Please email us at <a href="mailto:reneerussell2015@gmail.com">ReneeRussell2015@gmail.com</a> if you have any questions, need more information, or just want to send some love!</p>
 
 
-		<span><em><small>Site built and designed by the bride and <a href="http://russellschoenbeck.com">groom</a> &copy; 2014.</small></em></span>
+		<span><em><small>Site built and designed by the bride and <a href="http://russellschoenbeck.com">groom</a> &copy; 2015.</small></em></span>
 
 	</article>
 	<footer></footer>
