added additional elevation info

--- a/index.html
+++ b/index.html
@@ -287,8 +287,9 @@
 			</div>	
 			<p class="recommend">&#42;These are places or activities that come highly recommended by the bride and groom!</p>
 			<h6 id="altitude">A note about the altitude:</h6>
-			<p class="justify">Make sure you double the <a href="http://www.wikihow.com/Prevent-Altitude-Sickness#Ensuring_adequate_water_intake" target="_blank">amount of water</a> you normally drink starting two weeks before the wedding. It will help ease the transition in altitude from the midwest to Colorado and then up to Beaver Creek. Hopefully, it prevents altitude sickness as well. For reference, here are the elevations:</p>
+			<p class="justify">Make sure you double the <a href="http://www.wikihow.com/Prevent-Altitude-Sickness#Ensuring_adequate_water_intake" target="_blank">amount of water</a> you normally drink starting two weeks before the wedding. It will help ease the transition in altitude from sea level areas and the midwest to Colorado and then up to Beaver Creek. Hopefully, it prevents altitude sickness as well. For reference, here are the elevations:</p>
 			<ol class="left elevation">
+				<li>Sacramento ~ 30ft</li>
 				<li>Chicago ~ 600ft</li>
 				<li>Denver/Boulder ~ 5,600ft</li>
 				<li>Allie's Cabin ~ 8,600ft</li>
