added links for engagement shoot

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 			</ul>
 
 
-
+			<p class="justify">Shortly after we moved to Colorado, we had the wonderful experience of taking some engagement photos with one of our photographers, Jenny of <a href="http://www.nateandjennyweddings.com/">Nate and Jenny Weddings</a>. They have posted a collection of shots on <a href="http://www.nateandjennyweddings.com/russell-renee-boulder-engagement">their blog</a> so feel free to check them out <a href="http://www.nateandjennyweddings.com/russell-renee-boulder-engagement">here</a>! We started in an iconic Boulder location in front flatirons at <a href="https://www.chautauqua.com/">Chautauqua Park</a> and later made our way to <a href="http://www.sanitasbrewing.com/">Sanitas Brewery</a>. Thank you Jenny for such an amazing experience!</p>
 
 
 			<p class="justify">We're using <a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Wedpics</a> to capture our entire wedding experience. Help kick off our photo album by sharing your favorite candid photos with us: childhood memories, before we met, during our engagement, and anything else that tells our story. Of course, add photos of our special day!</p>
