added wedding photo links to blog and dropbox download

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		<li><a href="#story" class="hide-sm" data-scroll>Our Story</a></li>
 		<li><a href="#party" class="hide-sm" data-scroll>Wedding Party</a></li>
 		<li><a href="#events" data-scroll>Wedding Events</a></li>
-		<li><a href="#attire" data-scroll>Attire</a></li>
-		<li><a href="#lodging" data-scroll>Lodging</a></li>
-		<li><a href="#transportation" data-scroll>Transportation</a></li>
-		<li><a href="#activities" data-scroll>Area Activities</a></li>
+		<li><a href="#attire" class="hide-med" data-scroll>Attire</a></li>
+		<li><a href="#lodging" class="hide-med" data-scroll>Lodging</a></li>
+		<li><a href="#transportation" class="hide-med" data-scroll>Transportation</a></li>
+		<li><a href="#activities" class="hide-med" data-scroll>Area Activities</a></li>
 		<li><a href="#photos" data-scroll>Photos</a></li>
 		<li><a href="#registry" data-scroll>Registry</a></li>
 		<li><a href="#honeymoon" class="hide-med" data-scroll>Honeymoon</a></li>
-		<li><a href="#thanks" class="hide-med" data-scroll>Special Thanks</a></li>
+		<li><a href="#thanks" data-scroll>Special Thanks</a></li>
 	</ul>
 </nav>
 
@@ -376,8 +376,16 @@
 
 			<p class="justify">Shortly after we moved to Colorado, we had the wonderful experience of taking some engagement photos with one of our photographers, Jenny of <a href="http://www.nateandjennyweddings.com/">Nate and Jenny Weddings</a>. They have posted a collection of shots on <a href="http://www.nateandjennyweddings.com/russell-renee-boulder-engagement">their blog</a> so feel free to check them out <a href="http://www.nateandjennyweddings.com/russell-renee-boulder-engagement">here</a>! We started in an iconic Boulder location in front of the Flatirons at <a href="https://www.chautauqua.com/">Chautauqua Park</a> and later made our way to <a href="http://www.sanitasbrewing.com/">Sanitas Brewery</a>. Thank you Jenny for such an amazing experience!</p>
 
+			<p class="justify">After you've taken the time to check out <a href="http://www.nateandjennyweddings.com/russell-renee-boulder-engagement">our engagement photos</a>, <a href="http://www.nateandjennyweddings.com/">Nate and Jenny</a> have posted an additional <a href="http://www.nateandjennyweddings.com/renee-russell-beaver-creek-wedding">blog post</a> featuring the photos from the wedding. You can follow <a href="http://www.nateandjennyweddings.com/renee-russell-beaver-creek-wedding">this link here</a>.</p>
 
-			<p class="justify">We're using <a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Wedpics</a> to capture our entire wedding experience. Help kick off our photo album by sharing your favorite candid photos with us: childhood memories, before we met, during our engagement, and anything else that tells our story. Of course, add photos of our special day!</p>
+			<p class="justify">We have made all of our professional photos <a href="https://www.dropbox.com/sh/sbzjhry22wy7l6t/AACwbB5K7o2YPr3_SWBL4NzBa?dl=0">available online</a> for you to enjoy! You do not need a <a href="http://www.dropbox.com/">DropBox</a> account to view our photos; just use the password <strong><em>ReneeRussell2015</em></strong> when prompted.</p>
+
+			<p><a href="https://www.dropbox.com/sh/sbzjhry22wy7l6t/AACwbB5K7o2YPr3_SWBL4NzBa?dl=0">View all of our photos online here!</a></p>
+			<p>Password: ReneeRussell2015</p>
+
+			<p class="justify">Follow <a href="https://www.dropbox.com/sh/sbzjhry22wy7l6t/AACwbB5K7o2YPr3_SWBL4NzBa?dl=0">this link here</a> and you can view the photos online in your browser, download all of the photos as a .zip file, or load them straight in to your own DropBox account. Please feel free to print or share any photos with your family and friends! If you would like to create an account with DropBox, <a href="https://db.tt/ziSHdnA" target="_blank">use this link</a>. If you have more photos that you would like to share with us and everyone else, just let us know!</p>
+
+			<p class="justify">We used <a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Wedpics</a> to capture our entire wedding experience. Feel free to continue to add to our photo album by sharing your favorite candid photos with us: childhood memories, before we met, during our engagement, and anything else that tells our story. Of course, add photos of our special day!</p>
 			<a href="https://www.wedpics.com/wedding/MzAwNzU4/album"><img src="img/wedpicslogo.png" class="wedpics"></a>
 			<p><a href="https://www.wedpics.com/wedding/MzAwNzU4/album">Just click on the logo to view our album or add to it from your computer!</a></p>
 			<div class="wedpics group">
